# aoc24

./: UnionFind.hs  aoc.cabal  aoc1.hs  aoc10.hs  aoc11.hs  aoc12.hs  aoc13.hs  aoc14.hs  aoc15.hs  aoc16.hs  aoc17.hs  aoc18.hs  aoc19.hs  aoc2.hs  aoc20.hs  aoc21.hs  aoc22.hs  aoc23.hs  aoc24.hs  aoc25.hs  aoc3.hs  aoc4.hs  aoc5.hs  aoc6.hs  aoc7.hs  aoc8.hs  aoc9.hs  cabal.project  inp17.txt  test6.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-57231/limp-cbc-0.3.2.3/: README.md  changelog
